<resources>
    <string name="app_name">LineUp</string>
    <string name="action_settings">Settings</string>
    <string name="working_time">영업시간</string>
    <string name="vacation_time">휴무일</string>
    <string name="reservation">예약</string>
    <string name="parking">주차</string>
    <string name="packing">포장</string>
    <string name="sort">업종</string>
    <string name="homepage">홈페이지</string>
    <string name="address">주소</string>
    <string name="number">전화번호</string>
    <string name="restaurant_info">매장 정보</string>
    <string name="sample_work">일~목 11:30~22:30/금~토 11:30~23:00</string>
    <string name="smample_vac">연중무휴</string>
    <string name="sample_ok">가능</string>
    <string name="sample_sort">패밀리 레스토랑</string>
    <string name="sample_hp">http://www.outback.co.kr/</string>
    <string name="sample_address">서울특별시 서대문구 연세로 12길 33</string>
    <string name="sample_num">02-3147-1871</string>
    <string name="link_map">지도에서 보기</string>
    <string name="kakao_app_key">730c54132ea5aef23a274df83134c5da</string>
    <string name="add_star">별달기</string>
    <string name="lineup">라인업</string>
    <string name="n">명</string>
    <string name="res_info_1">예약 인원</string>
    <string name="res_info_2">예약 이유</string>
    <string name="date">데이트</string>
    <string name="family">가족</string>
    <string name="group">모임</string>
    <string name="sample_name">아웃백 스테이크</string>
    <string name="setting">설정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="version_1">버전 정보</string>
    <string name="anounce">약관</string>
    <string name="question">문의</string>
    <string name="account">계정 관리</string>
    <string name="push">푸시 알림</string>
    <string name="coupon">쿠폰 만료일 알림</string>
    <string name="version_2">버전</string>
    <string name="anounce_2">약관 보기</string>
    <string name="question_2">문의 하기</string>
    <string name="logout">로그아웃</string>
    <string name="readay">서비스 준비 중입니다.</string>
    <string name="rev_name">예약자 이름 : </string>
    <string name="rev_num">예약 인원 : </string>
    <string name="waitingtime">남은 대기 시간 : </string>
    <string name="sample">딩거</string>
    <string name="min">분</string>
    <string name="cancel">예약 취소</string>
    <string name="send_link">링크 보내기</string>
    <string name="no_rec">아직 다녀오신 곳이 없습니다.</string>
    <string name="no_coup">등록된 쿠폰이 없습니다.</string>
    <string name="no_rev">등록된 라인업이 없습니다.</string>
    <string name="no_fav">등록된 즐겨찾기가 없습니다.</string>
    <string name="no_review">현재 등록된 리뷰가 없습니다.</string>
    <string name="Korean">한 식</string>
    <string name="Japanese">일 식</string>
    <string name="Chinese">중 식</string>
    <string name="Western">양 식</string>
    <string name="Halmae">할매집</string>
    <string name="complete">라인업 완료되었습니다.</string>
    <string name="repetition">이미 라인업하셨습니다.</string>
</resources>
