<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/maincolor"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/setting"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/setting_alarm"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/push"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/margin">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/coupon"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/version_1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/version_2"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/anounce"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/anounce_2"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/question"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/question_2"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/account"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/logout"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/margin">
    </LinearLayout>
</LinearLayout>