<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:id="@+id/res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="신촌"
            android:textSize="20dp"
            android:textColor="#9E9E9E"
            android:textStyle="bold"
            android:layout_above="@+id/res1"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/res_info_1"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="1"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="2"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="3"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="4"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="5"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:text="6"
                        android:textSize="13dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/res_info_2"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15dp"/>
            <LinearLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:text="@string/date"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:text="@string/family"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:text="@string/group"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_box"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:background="@drawable/lineup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lineup"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>