<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="신촌"
                android:gravity="center_horizontal"
                android:textColor="#BDBDBD"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="아웃백 스테이크"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="60dp">

            <LinearLayout
                android:background="@drawable/untitled_1"
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="55dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="25dp"
                        android:layout_height="match_parent">

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="130dp"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3.0"
                                android:textColor="@color/maincolor"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="90dp"
                            android:layout_height="match_parent">
                            <RatingBar
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                style="@style/starratingbar"
                                android:layout_gravity="center"
                                android:numStars="5"
                                android:stepSize="0.5"
                                android:rating="5.0"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginRight="3dp"
                        android:layout_width="37dp"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:text="N"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:text="@string/n"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/add_star"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#BDBDBD"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:background="@drawable/lineup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lineup"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
</LinearLayout>